src/FinancialForce Accounting/objects/codaPaymentTemplate__c.object
<CustomObject>
    <customHelpPage>codahelppaymenttemplate</customHelpPage>
    <description>Defines a template for a new payment proposal.</description>
    <fields>
        <fullName>AccountCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Currency</label>
        <referenceTo>codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Payment Templates (Account Currency)</relationshipLabel>
        <relationshipName>PaymentTemplatesAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BankAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account</label>
        <referenceTo>codaBankAccount__c</referenceTo>
        <relationshipLabel>Payment Templates</relationshipLabel>
        <relationshipName>PaymentTemplates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CWODimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 1</label>
        <referenceTo>codaDimension1__c</referenceTo>
        <relationshipLabel>Payment Templates</relationshipLabel>
        <relationshipName>PaymentTemplatesCWO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CWODimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 2</label>
        <referenceTo>codaDimension2__c</referenceTo>
        <relationshipLabel>Payment Templates</relationshipLabel>
        <relationshipName>PaymentTemplatesCWO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CWODimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 3</label>
        <referenceTo>codaDimension3__c</referenceTo>
        <relationshipLabel>Payment Templates</relationshipLabel>
        <relationshipName>PaymentTemplatesCWO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CurrencyMode__c</fullName>
        <label>Currency Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Document</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CurrencyWriteOff__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Currency Write-off</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Payment Templates (Currency Write-off)</relationshipLabel>
        <relationshipName>PaymentTemplatesCurrencyWriteOff</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DocumentCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Document Currency</label>
        <referenceTo>codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Payment Templates (Document Currency)</relationshipLabel>
        <relationshipName>PaymentTemplatesDC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GeneralLedgerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>General Ledger Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Payment Templates</relationshipLabel>
        <relationshipName>PaymentTemplates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>codaCompany__c</referenceTo>
        <relationshipLabel>Payment Templates</relationshipLabel>
        <relationshipName>PaymentTemplates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PaymentCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Currency</label>
        <referenceTo>codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Payment Templates (Payment Currency)</relationshipLabel>
        <relationshipName>Payment_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PaymentMediaTypes__c</fullName>
        <label>Payment Media</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentMethod__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Electronic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PaymentTypes__c</fullName>
        <label>Payment Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDRDimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 1</label>
        <referenceTo>codaDimension1__c</referenceTo>
        <relationshipLabel>Payment Templates (Dimension 1)</relationshipLabel>
        <relationshipName>PaymentTemplatesSDR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDRDimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 2</label>
        <referenceTo>codaDimension2__c</referenceTo>
        <relationshipLabel>Payment Templates (Dimension 2)</relationshipLabel>
        <relationshipName>PaymentTemplatesSDR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDRDimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 3</label>
        <referenceTo>codaDimension3__c</referenceTo>
        <relationshipLabel>Payment Templates (Dimension 3)</relationshipLabel>
        <relationshipName>PaymentTemplatesSDR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SettlementDiscountReceived__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Settlement Discount</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Payment Templates (Settlement Discount Received)</relationshipLabel>
        <relationshipName>PaymentTemplatesSettlementDiscountReceiv</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Payment Template</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>GeneralLedgerAccount__c</columns>
        <columns>CurrencyMode__c</columns>
        <columns>PaymentMethod__c</columns>
        <columns>PaymentMediaTypes__c</columns>
        <columns>PaymentTypes__c</columns>
        <columns>BankAccount__c</columns>
        <columns>OwnerCompany__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Payment Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Templates</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>